# clanker-secure

./: .dockerignore  .gitignore  AGENTS.md  BACKLOG.md  Dockerfile  README.md  clanker.dev.db  clanker.test.db  example_usage.py  pyproject.toml  tmp_test_advisories.json
.github/: labels.yml
.github/ISSUE_TEMPLATE/: bug.yml  task.yml
.github/workflows/: ci.yml  labels.yml  project-automation.yml
.venv_agent/: pyvenv.cfg
data/: agent_advisories.json
docs/: AUTH_RBAC.md  GETTING_STARTED.md  ROADMAP.md  WORKFLOW.md  acceptance-criteria.md  architecture.md  cpe_mapping.md  protocol_parsers.md  requirements.md  roadmap.md  traceability.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
overlay/: __init__.py  auto_enrich.py  enrichment_api.py  main_override.py  rbac_override.py  scans_api.py  scheduling.py  security_headers.py  startup_enrichment.py
overlay/auth/: __init__.py  api.py  models.py  security.py
overlay/core/: enrichment.py
scripts/: auto_rebuild.sh  rebuild.sh  rule_gap_audit.py  smoke.sh
src/clanker/: __main__.py  config.py  main.py  worker.py
templates/: index.html
tests/: conftest.py  test_agent_ingest.py  test_auth_hardening.py  test_cpe_pipeline.py  test_finding_serialization.py  test_job_queue.py  test_metrics_and_correlation.py  test_observability_metrics.py  test_pagination_filters.py  test_protocol_parsers.py  test_rule_gap_audit.py  test_scan_job_worker.py  test_smoke_health.py
tests/core/: test_agent_parsers.py  test_agent_vuln_logic.py  test_cpe_inference.py  test_evidence.py
(+30 files in other folders)
