[tool.poetry]
name = "clanker"
version = "0.1.0"
description = "Lightweight vulnerability scanner MVP"
authors = ["dzacharias <dzacharias@example.com>"]
readme = "README.md"
packages = [{ include = "clanker", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {version = "^0.30.0", extras = ["standard"]}
sqlmodel = "^0.0.18"
httpx = "^0.27.0"
python-dotenv = "^1.0.1"
jinja2 = "^3.1.4"
pydantic-settings = "^2.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
ruff = "^0.5.5"
black = "^24.8.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
